[package]
name = "rust-load-balancer"
version = "0.1.0"
edition = "2021"

[dependencies]
# Axum 0.7 dùng http 1.0
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# QUAN TRỌNG: Reqwest 0.12 mới tương thích với Axum 0.7 (http 1.0)
reqwest = { version = "0.12", features = ["json", "stream"] }

tower-http = { version = "0.5", features = ["cors", "trace"] }

# QUAN TRỌNG: Cần feature "sync" để dùng BroadcastStream
tokio-stream = { version = "0.1", features = ["sync"] }

md5 = "0.7"
futures = "0.3"
chrono = "0.4"

comfy-table = "7.1"
crossterm = "0.27"